# Modeling-of-Lithium-Ion-Batteries

./: 4P1S.py  Bachelor Thesis.pages  LICENSE  README.md  constDischargeVarTemp.py  constTempVarDischarge.py  gpt.py  grok.py  pyproject.toml  singleCell.py  tut.py
src/: 4P1S.py  PackSimulation.py  batteryPack_gui.py  battery_gui.py  constDischargeVarTemp.py  constTempVarDischarge.py  grok.py  singleCell.py
