[project]
name = "bachelorpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "liionpack>=0.4.0",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pybamm[cite]>=25.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
